--- a/public/style.css
+++ b/public/style.css
@@ -10,26 +10,27 @@ body {
 
 a {
   text-decoration: none;
-}
-
-label {
-  display: block;
-}
+} 
 
 nav a {
   display: inline-block;
   margin: 1em;
 }
 
-form div {
-  margin: 1em;
-  display: inline-block;
+#app {
+  height: 100%;
 }
 
-appContainer {
+.appContainer {
   display: flex;
+  height: 100%;
 }
 
-mainContainer {
+.mainContainer {
   flex: auto;
+}
+
+.formContainer {
+  padding: 10px 20px;
+  max-width: 700px;
 }
