--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,13 @@ body {
 
 a {
   text-decoration: none;
-} 
+}
+
+nav {
+  position: fixed;
+  background-color: white;
+  width: 100%;
+}
 
 nav a {
   display: inline-block;
@@ -23,14 +29,21 @@ nav a {
 
 .appContainer {
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
 
 .mainContainer {
-  flex: auto;
+  flex: 1 1 auto;
+  overflow: auto;
+}
+
+.imageContainer {
+  flex: 0;
 }
 
 .formContainer {
   padding: 10px 20px;
   max-width: 700px;
+  margin-top: 56px;
+  margin-bottom: 30px;
 }
